--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.js">
+     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
     
 </head>
 
@@ -69,7 +70,9 @@
             </div>
         </div>
     </div>
-   
+   <script src="main.js">
+
+   </script>
 </body>
 
 </html>
